# RUDA

Examples/: NAVOD-docker-swarm-centos7.txt  Vagrantfile
Examples/Dockerfile/: docker-compose-docker.yml  docker-compose.yml  docker_env_file.env
Examples/Dockerfile/CatkinWS_client/: Dockerfile  entrypoint.launch  prepare_env.sh
Examples/Dockerfile/CatkinWS_client/src/mvcr_odometry/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt_old  NAVOD.txt  README.txt  frames.gv  package.xml  start_odometry.sh
Examples/Dockerfile/CatkinWS_client/src/mvcr_odometry/include/: argparser.hh
Examples/Dockerfile/CatkinWS_client/src/mvcr_odometry/launch/: odometry.launch
Examples/Dockerfile/CatkinWS_client/src/mvcr_odometry/src/: argparser.cpp  node.cpp  node.cpp~
Examples/Dockerfile/CatkinWS_client/src/tb_master_ntb/tb_bringup/: CMakeLists.txt  package.xml
Examples/Dockerfile/CatkinWS_client/src/tb_master_ntb/tb_bringup/components/: fake_odom.launch  frames.gv  laser.launch  laser_fake.launch
Examples/Dockerfile/CatkinWS_client/src/tb_master_ntb/tb_bringup/launch/: robot.launch
Examples/Dockerfile/CatkinWS_client_clean/: Dockerfile  open_bash.sh
Examples/Dockerfile/IDRIS_scan/: Dockerfile  README.sh  run.sh
Examples/Dockerfile/IDRIS_scan/sources/: run.sh
Examples/Dockerfile/MORSE/: Dockerfile  open_bash.sh  register.sh  run.sh  wait_for_registration.sh
Examples/Dockerfile/MORSE/catkin_ws_src/morse_motion_driver/: CMakeLists.txt  package.xml
Examples/Dockerfile/MORSE/catkin_ws_src/morse_motion_driver/launch/: control.launch
Examples/Dockerfile/MORSE/catkin_ws_src/morse_motion_driver/src/: morse_motion_driver_node.cpp
Examples/Dockerfile/MORSE/sources/: morse_config  robot.blend  ros_topic_pub.sh
Examples/Dockerfile/MORSE/sources/ruda_sim/: .default.py.swp  default.py
Examples/Dockerfile/MORSE/sources/ruda_sim/data/ruda_sim/robots/: RUDA.fcstd  RUDA.fcstd1  Ruda.blend  Ruda.blend1  Ruda.blend2  Ruda.stl
Examples/Dockerfile/MORSE/sources/ruda_sim/scripts/: ruda_sim_client.py
Examples/Dockerfile/MORSE/sources/ruda_sim/src/ruda_sim/builder/robots/: Ruda.py  __init__.py
Examples/Dockerfile/MORSE/sources/ruda_sim/src/ruda_sim/robots/: Ruda.py
Examples/Dockerfile/MORSE/sources/socket_client/: client.sh
Examples/Dockerfile/ROS_DNS/: Dockerfile  TODO.txt  dnsmasq.conf  lighttpd.conf
Examples/Dockerfile/ROS_DNS/ssh_key_pair/: dns_key  dns_key.pub  register.sh
Examples/Dockerfile/ROS_VPN_CA/: Dockerfile  run.sh
Examples/Dockerfile/ROS_VPN_client/: Dockerfile  client_default.ovpn  post_start.sh  run.sh  start_ovpn_client.sh
Examples/Dockerfile/ROS_VPN_server/: Dockerfile  bridge.sh  run.sh  server.conf
Examples/Dockerfile/ROS_VPN_server/keys/: ROS_VPN.crt  ROS_VPN.key  ca.crt  dh2048.pem  ta.key
Examples/Dockerfile/ROScore/: Dockerfile
Examples/Dockerfile/Rviz/: Dockerfile  open_bash.sh  run.sh
Examples/Dockerfile/SLAMgmapping/: Dockerfile
Examples/vagrant_shared/: .run_master.sh.swp  check_cluster_example.sh  consul_master.sh  consul_slave.sh  docker.service  docker_pull_images.sh  get_my_ip.sh  get_other_ip.sh  registrator.sh  run_master.sh  run_slave.sh  swarm_agent.sh  swarm_manager.sh
