<package>
  <name>tb_bringup</name>
  <version>0.1.0</version>
  <description>

     turtlebot_bringup provides roslaunch scripts for starting the TurtleBot base functionality. 

  </description>
  <author>Zdenek Materna (imaterna@fit.vutbr.cz), modified by Radim Luza (iluza@fit.vutbr.cz)</author>
  <maintainer email="imaterna@fit.vutbr.cz">Zdenek Materna (imaterna@fit.vutbr.cz)</maintainer>
  <license>BUT Open Souce License</license>
  <url>http://ros.org/wiki/tb_bringup</url>

   <buildtool_depend>catkin</buildtool_depend>
<buildtool_depend>joy</buildtool_depend>
<buildtool_depend>robot_state_publisher</buildtool_depend>
<buildtool_depend>openni_camera</buildtool_depend>
<buildtool_depend>tb_description</buildtool_depend>
<buildtool_depend>robot_pose_ekf</buildtool_depend>
<buildtool_depend>LMS1xx</buildtool_depend>
<buildtool_depend>compressed_image_transport</buildtool_depend>

<run_depend>joy</run_depend>
<run_depend>robot_state_publisher</run_depend>
<run_depend>openni_camera</run_depend>
<run_depend>tb_description</run_depend>
<run_depend>robot_pose_ekf</run_depend>
<run_depend>LMS1xx</run_depend>
<run_depend>compressed_image_transport</run_depend>


  <!-- depend package="joy"/>
  <depend package="robot_state_publisher"/>
  <depend package="openni_camera"/>
  <depend package="tb_description"/-->
  <!--depend package="btb_imu"/-->
  <!--depend package="robot_pose_ekf"/>
  <depend package="LMS1xx"/-->
  <!--depend package="laser_scan_matcher"/-->
  <!--depend package="srs_env_model_utils"/-->

  <!-- for video teleoperation -->
  <!--depend package="compressed_image_transport"/-->
  
</package>


